--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body{
+
 font-family: helvetica, large;
 font-size: 30;
-/*background-color: #8BC6EC;*/
-/*background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 50%, #ffffff 100%);*/
+color: white;
+background-color: #8BC6EC;
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 50%, #ffffff 100%);
 background-image: url(pictures/coral_learn_page.jpg);
+background-position-x: center;
+background-repeat: no-repeat;
 }
